<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bis Morgen!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry__cocktail">Entry_Cocktail</string>
    <string name="title_activity_anzeige">AnzeigeActivity</string>









    <!-- Bezeichner fuer Ansicht Erstellen, zutat1-8 -->
    <string name="zutat1">Zutat 1</string>
    <string name="zutat2">Zutat 2</string>
    <string name="zutat3">Zutat 3</string>
    <string name="zutat4">Zutat 4</string>
    <string name="zutat5">Zutat 5</string>
    <string name="zutat6">Zutat 6</string>
    <string name="zutat7">Zutat 7</string>
    <string name="zutat8">Zutat 8</string>


    <!-- Buttons  -->

    <!-- Buttons für menue-->
    <string name="button_choose">Auswählen</string>
    <string name="BluetoothKonfig">Verbindung herstellen</string>
    <string name="button_setting">Einstellungen</string>
    <string name="beenden">Beenden</string>
    <string name="title_activity_option_list">OptionListActivity</string>
    <string name="title_activity_cocktail__list">Cocktail_List</string>
    <string name="title_activity_cocktail__entry">Cocktail_Entry</string>
    <string name="title_activity_cocktail__settings">Cocktail_Settings</string>


    <!-- Buttons fuer Einstellungen -->
    <string name="pumpen_wechseln">Pumpen wechseln</string>
    <string name="pumpen_reinigen">Pumpen reinigen</string>

    <!-- Button zum Speichern eines Entries in Erstellen -->
    <string name="button_speichern">SPEICHERN</string>

    <!-- Auswahlliste-->
    <string-array name="auswahl_liste">
        <item>NULL</item>
        <item>Getränkeliste</item>
        <item>Sonstiges</item>
    </string-array>

    <!-- Cl-Liste-->
    <string-array name="cl_liste">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>

    <string name="title_activity_database_test">DatabaseTest</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_blue">blueActivity</string>



    //bluetooth
    <string name="ButtonInit">Konfigurieren</string>
    <string name="on">Turn on</string>
    <string name="Text">Status: -</string>
    <string name="off">Turn off</string>
    <string name="List">List paired devices</string>
    <string name="Find">search new devices</string>
    <string name="none_paired">nicht gekoppelt</string>
    <string name="title_activity_cocktail_source">CocktailSource</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_auftrag_bearbeiten">AuftragBearbeiten</string>
    <string name="title_activity_cocktail__source">Cocktail_Source</string>

    <string name="title_activity_entry_">Entry_Activity</string>





</resources>