<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamvollrausch.sh.bismorgen.Entry_Cocktail"
     >




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"

        >


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Bitte Namen eingeben"

            android:id="@+id/cocktail_eingabe"/>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/zutat1"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "cl"
            android:layout_weight="0.5"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"
                android:layout_weight="0.5"

                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge6"
                android:layout_weight="1"
                />

        </LinearLayout>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "@string/zutat2"/>




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_weight="0.5"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge1"
                android:layout_weight="1"
                />

        </LinearLayout>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "@string/zutat3"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:layout_weight="0.5"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge2"
                android:layout_weight="1"
                />

        </LinearLayout>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "@string/zutat4"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner4"
                android:layout_weight="0.5"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge3"
                android:layout_weight="1"
                />

        </LinearLayout>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "@string/zutat5"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:layout_weight="0.5"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge4"
                android:layout_weight="1"
                />

        </LinearLayout>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "@string/zutat6"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner6"
                android:layout_weight="0.5"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge5"
                android:layout_weight="1"
                />

        </LinearLayout>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "@string/zutat7"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner7"
                android:layout_weight="0.5"
                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge7"
                android:layout_weight="1"
                />

        </LinearLayout>



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text ="@string/zutat8"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner8"
                android:layout_weight="0.5"

                />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menge8"
                android:layout_weight="1"
                />

        </LinearLayout>



        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speichern_button"
            android:background="@drawable/save_button"
            android:text="@string/button_speichern"

            android:layout_gravity="center"
            android:onClick="GoToCreate"

            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textView"
            />

    </LinearLayout>
</ScrollView>